...
                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="GFF-Ik-jiq">
                                    <rect key="frame" x="267" y="15.5" width="131" height="32"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="131" id="G3s-G5-a2x"/>
                                    </constraints>
                                    <segments>
                                        <segment title="Saved"/>
                                        <segment title="Latest"/>
                                    </segments>
                                    <connections>
                                        <action selector="segmentedControlValueChanged:" destination="WeE-Yz-R5T" eventType="valueChanged" id="U2C-5A-G8H"/>
                                    </connections>
                                </segmentedControl>
                            </subviews>
...
