...
    </dependencies>
    <scenes>
        <!--Upcoming-->
        <scene sceneID="Q0K-B3-4zD">
            <objects>
                <navigationController id="DJS-6y-711" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Upcoming" image="clock.arrow.2.circlepath" catalog="system" id="rbm-SS-fTN"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qfv-HO-IET">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="IzW-uT-jpN" kind="relationship" relationship="rootViewController" id="Tij-3L-A1W"/>
...
