...
    </dependencies>
    <scenes>
        <!--Popular-->
        <scene sceneID="m2r-IG-zGO">
            <objects>
                <navigationController id="tQ8-gh-PDq" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Popular" image="flame" catalog="system" id="GUb-2B-lkx">
                        <color key="badgeColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </tabBarItem>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="qoO-eR-Cj4">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
